--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "child_process": "^1.0.2",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "mongodb": "^6.5.0",
